# CheckersC

./: .gitignore  CMakeLists.txt  README.md
include/: ai.h  board.h  rules.h
src/: ai.c  board.c  gui_win.c  rules.c
